--- a/css/Home.css
+++ b/css/Home.css
@@ -30,9 +30,10 @@
 .Login {
     width: 15%;
     text-decoration: none;
-    padding: 10px;
+    padding: 0.8%;
     font-size: 18px;
     text-align: center;
+    background-color: #46c65f;
     
 }
 
@@ -55,12 +56,13 @@
     display: flex;
     width: 45%;
     margin: 0 auto;
+    background-color: #ccc;
 }
 
 .navMenu {
     display: flex;
     text-align: center;
-    padding: 10px;
+    padding: 2%;
     gap: 25%;
     margin-left: 15%;
 }
@@ -106,13 +108,12 @@
 .TotalRight {
     float: left;
     width: 20%;
-    height: 720px;
 }
 
 .Ga {
-    top: 400px;
-    width: 150px;
-    margin-left: 110px;
+    top: 70%;
+    width: 14%;
+    margin-left: 6%;
     position: fixed;      
 }
 
@@ -137,13 +138,16 @@ hr {
     clear: both;
     display: flex;
     justify-content: space-between;
-    padding: 30px;
+    padding: 4%;
+    background-color: aqua;
+    margin-right: 1%;
 }
 
 .IMG {
     margin-left: 8%;
     margin-right: 8%;
-    margin-bottom: 20px;
+    margin-bottom: 3%;
+    width: 84%;
 }
 
 .left-content {
@@ -154,8 +158,9 @@ hr {
     width: 40%;
     background-color: #fff;
     color: #333;
-    padding: 30px;
+    padding: 2.5%;
     border-radius: 8px;
+    background-color: blue;
 }
 
 .right-content h2 {
@@ -165,22 +170,23 @@ hr {
 
 .right-content input {
     width: 94%;
-    padding: 10px;
-    margin: 10px 0;
+    padding: 2%;
+    margin: 2.5% 0;
     border: 1px solid #ccc;
     border-radius: 4px;
+    background-color: rgb(180, 29, 82);
 }
 
 .right-content button {
     width:99%;
-    padding: 10px;
+    padding: 2%;
     border: none;
     color: white;
     background-color: #46c65f;
     font-size: 16px;
     border-radius: 4px;
     cursor: pointer;
-    margin: 10px 0 0 0;
+    margin: 2.5% 0 0 0;
 }
 
 .status-container {
@@ -190,20 +196,12 @@ hr {
     color: #333;
 }
 
-.status-indicator {
-    width: 12px;
-    height: 12px;
-    border-radius: 50%;
-    margin-right: 10px;
-    background-color: #46c65f;
-}
-
 .status-text {
     font-weight: bold;
 }
 
 .DKN {
-    margin-top: 50px;
+    margin-top: 10%;
     display: flex;
 }
 
@@ -213,26 +211,31 @@ hr {
 
 .DBL {
     width: 70%;
-    height: 160px;
-    margin-left: 10%;
     font-size: 26px;
-    margin-top: 10px;
+    margin-top: 2%;
 }
 
 .DC {
     clear: both;
-    margin-top: 50px;
+    margin-top: 10%;
 }
 
 .GaRan {
     width: 100%;
-    height: 200px;
 }
 
 .GaRanIMG {
-    width: 250px;
+    width: 100%;
 }
 
 .container {
-    width: 1247px;
+    width: 96vw;
+    margin-right: 1vw;
+    margin-left: 1vw;
+}
+
+.DK {
+    border: none;
+    background: transparent;
+    width: 100%;
 }
