--- a/css/Home.css
+++ b/css/Home.css
@@ -87,19 +87,6 @@
     cursor: pointer;
 }
 
-@media (max-width: 838px) {
-    .Menu {
-        display: none; 
-    }
-    .Name {
-        width: 100%;
-    }
-
-    .Login {
-        display: none;
-    }
-}
-
 .TotalLeft {
     width: 80%;
     float: left;
@@ -209,12 +196,6 @@ hr {
     float: left;
 }
 
-.DBL {
-    width: 70%;
-    font-size: 26px;
-    margin-top: 2%;
-}
-
 .DC {
     clear: both;
     margin-top: 10%;
@@ -238,4 +219,178 @@ hr {
     border: none;
     background: transparent;
     width: 100%;
+}
+
+.TotalRight img {
+    display: none;
+}
+
+@media (max-width: 2000px) {
+
+    .TotalRight img:first-child {
+        display: inline-block;
+    }
+
+    .TotalRight img:nth-child(2) {
+        display: inline-block;
+    }
+
+    .TotalRight img:nth-child(3) {
+        display: inline-block;
+    }
+
+    .TotalRight img:nth-child(4) {
+        display: inline-block;
+    }
+}
+
+@media (max-width: 1024px) {
+
+    .TotalRight img:nth-child(5) {
+        display: inline-block;
+    }
+}
+
+@media (max-width: 820px) {
+    .Menu {
+        display: none; 
+    }
+    .Name {
+        width: 100%;
+    }
+
+    .Login {
+        display: none;
+    }
+
+    .TotalRight img:nth-child(6) {
+        display: inline-block;
+    }
+
+    .right-content h2 {
+        margin-left: 15%;
+    }
+    
+}
+
+@media (max-width: 654px) {
+    .right-content h2 {
+        margin-left: 5%;
+    }
+    
+}
+
+@media (max-width: 614px) {
+    .TotalRight img:nth-child(7) {
+        display: inline-block;
+    }
+
+    .right-content h2 {
+        font-size: 20px;
+        margin-left: 5%;
+    }
+    
+    
+}
+
+@media (max-width: 537px) {
+    .TotalRight img:nth-child(8) {
+        display: inline-block;
+    }
+    .right-content h2 {
+        font-size: 16px;
+        margin: 7% 3% 7% 5%;
+    }
+    .right-content input {
+        width: 94%;
+        padding: 3%;
+        margin: 5% 0 5% 0;
+    }
+    
+    .right-content button {
+        width:99%;
+        padding: 2%;
+        margin: 5% 0 5% 0;
+    }
+
+    .DC {
+        margin-top: 2%;
+    }
+
+    .DKN {
+        margin-top: 2%;
+    }
+    
+}
+
+@media (max-width: 500px) {
+    .TotalRight img:nth-child(9) {
+        display: inline-block;
+    }
+    
+}
+
+@media (max-width: 458px) {
+    .TotalRight img:nth-child(10) {
+        display: inline-block;
+    }
+}
+
+@media (max-width: 430px) {
+
+    .TotalRight img:nth-child(12) {
+        display: inline-block;
+    }
+
+    .right-content h2 {
+        font-size: 14px;
+        margin: 7% 3% 7% 5%;
+    }
+    .right-content input {
+        width: 94%;
+        padding: 3%;
+        margin: 5% 0 5% 0;
+    }
+    
+    .right-content button {
+        width:99%;
+        padding: 2%;
+        margin: 5% 0 5% 0;
+    }
+
+    .DC {
+        margin-top: 2%;
+    }
+
+    .DKN {
+        margin-top: 2%;
+    }
+
+    
+}
+
+@media (max-width: 412px) {
+
+    .TotalRight img:nth-child(13) {
+        display: inline-block;
+    }
+}
+
+@media (max-width: 390px) {
+
+    .TotalRight img:nth-child(13) {
+        display: none;
+    }
+
+    .TotalRight img:nth-child(11) {
+        display: inline-block;
+    }
+    
+}
+
+@media (max-width: 376px) {
+    .TotalRight img:nth-child(14) {
+        display: inline-block;
+    }
+
 }
