--- a/css/Order.css
+++ b/css/Order.css
@@ -86,6 +86,11 @@
     opacity: 1;
 }
 
+.navMenu a:nth-child(2) {
+    opacity: 1;
+    text-decoration: underline;
+}
+
 .LG:hover{
     text-decoration: underline;
     cursor: pointer;
