--- a/css/index.css
+++ b/css/index.css
@@ -75,6 +75,11 @@
     opacity: 0.5; 
 }
 
+.navMenu a:first-child {
+    opacity: 1;
+    text-decoration: underline;
+}
+
 .navMenu a:hover {
     text-decoration: underline;
     cursor: pointer;
