--- a/css/policy.css
+++ b/css/policy.css
@@ -1,3 +1,13 @@
+.navMenu a:nth-child(4) {
+    opacity: 1;
+    text-decoration: underline;
+}
+
+.navMenu a:nth-child(2) {
+    opacity: 0.5;
+    text-decoration: none;
+}
+
 .policy-wrapper {
     padding: 40px 20px;
     max-width: 1200px;
