--- a/css/login.css
+++ b/css/login.css
@@ -114,3 +114,54 @@
         padding: 20px;
     }
 }
+
+/* Màn hình lớn (14 inch trở lên) */
+@media (min-width: 1366px) {
+    .form-container {
+        width: 450px;
+        padding: 40px;
+    }
+
+    .form-box h2 {
+        font-size: 32px;
+    }
+
+    .input-box input {
+        padding: 18px 50px;
+        font-size: 18px;
+    }
+
+    .input-box i {
+        font-size: 20px;
+    }
+
+    .login-btn, .register-btn {
+        padding: 18px;
+        font-size: 18px;
+    }
+
+    .remember-forgot, .register-link {
+        font-size: 16px;
+    }
+}
+
+/* Màn hình rất lớn (1920px trở lên) */
+@media (min-width: 1920px) {
+    .form-container {
+        width: 500px;
+        padding: 50px;
+    }
+
+    .form-box h2 {
+        font-size: 36px;
+    }
+
+    .input-box input {
+        padding: 20px 55px;
+        font-size: 20px;
+    }
+
+    .input-box i {
+        font-size: 22px;
+    }
+}
