--- a/css/register.css
+++ b/css/register.css
@@ -121,3 +121,59 @@
         padding: 12px;
     }
 }
+
+/* Màn hình lớn (14 inch trở lên) */
+@media (min-width: 1366px) {
+    .form-container {
+        width: 600px;
+        padding: 50px;
+    }
+
+    .form-container h2 {
+        font-size: 32px;
+    }
+
+    .input-box input {
+        padding: 18px 50px;
+        font-size: 18px;
+    }
+
+    .input-box i {
+        font-size: 20px;
+    }
+
+    .terms, .newsletter {
+        font-size: 16px;
+    }
+
+    .register-btn {
+        padding: 18px;
+        font-size: 18px;
+    }
+}
+
+/* Màn hình rất lớn (1920px trở lên) */
+@media (min-width: 1920px) {
+    .form-container {
+        width: 700px;
+        padding: 60px;
+    }
+
+    .form-container h2 {
+        font-size: 36px;
+    }
+
+    .input-box input {
+        padding: 20px 55px;
+        font-size: 20px;
+    }
+
+    .input-box i {
+        font-size: 22px;
+    }
+
+    .register-btn {
+        padding: 20px;
+        font-size: 20px;
+    }
+}
