--- a/css/index.css
+++ b/css/index.css
@@ -137,11 +137,17 @@
     margin-top: 0.9%;
 }
 
+.Left img {
+    width: 90%;
+    margin-left: 5%;
+    margin-top: 1.5%;
+}
+
 .Left p {
-    font-size: 16px;
+    font-size: 17px;
     font-family: Arial, Helvetica, sans-serif;
-    margin-left: 10%;
-    margin-right: 10%;
+    margin-left: 5%;
+    margin-right: 5%;
 }
 
 hr { 
@@ -444,6 +450,7 @@ html {
 }
 .GaRan {
     width: 90%;
+    margin-top: 7px;
 }
 .GaRanIMG {
     width: 100%;
@@ -454,6 +461,7 @@ html {
 }
 .TotalRight img {
     display: none;
+    margin-top: 10px;
 }
 @media (max-width: 2000px) {
 
